[workspace]
resolver = "2"
members = ["sanctum-lst-list", "tojup"]

[workspace.dependencies]
clap = { version = "^4", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_with = "^3"
solana-program = "^1"
sanctum-macros = "^1"
toml = ">=0.1"

# workspace members
sanctum-lst-list = { path = "./sanctum-lst-list" }
