[package]
name = "sanctum-lst-list"
version = "0.2.0"
edition = "2021"

include = ["README.md", "sanctum-lst-list.toml", "src/"]

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
solana-program = { workspace = true }
sanctum-macros = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
borsh = { workspace = true }
reqwest = { workspace = true }
solana-client = { workspace = true }
spl_stake_pool_interface = { workspace = true }
spl-token-2022 = { workspace = true }
tokio = { workspace = true }
